# tbg

./: .editorconfig  .gitmodules  CMakeLists.txt
.cache/clangd/index/: Angle.hpp.F493AED72FA912E6.idx  Angle.inl.00F4187A5614ECFE.idx  AudioDevice.cpp.7BB15C4996EFAF6F.idx  AudioDevice.hpp.38A4CE94088D073B.idx  AudioResource.cpp.214F1DA0E597A3A6.idx  AudioResource.hpp.160F6E7CD482F703.idx  BlendMode.cpp.B5D4AB470FD53BCB.idx  BlendMode.hpp.4CC30CC4A3D04699.idx  CircleShape.cpp.7C86C1FE26A78E39.idx  CircleShape.hpp.847EFB13EF63AD62.idx  Clipboard.cpp.E03C8A2C29CE8988.idx  Clipboard.hpp.0711D983C56BAA68.idx  ClipboardImpl.cpp.1534EBE2C43DB6FE.idx  ClipboardImpl.hpp.6912A3CEB49447A8.idx  ClipboardImpl.hpp.7696E841A421F4EB.idx  Clock.cpp.1CA8F25745A315B6.idx  Clock.hpp.427E841E26881F83.idx  Color.hpp.CBF1157A242C3195.idx  Color.inl.1EE37FE8577D1E8A.idx  Config.hpp.214E0609966988F5.idx  Context.cpp.21F8FEA020AADA94.idx  Context.hpp.6397834175833CA6.idx  ContextSettings.hpp.A31203AB5169BCA9.idx  ConvexShape.cpp.D3E6FD1304D98E51.idx  ConvexShape.hpp.8A9625AA35C95965.idx  CoordinateType.hpp.9AD49D7C7CC68AE7.idx  Cursor.cpp.ADCB04CF88D0350F.idx  Cursor.hpp.4925CA2DC83FF063.idx  CursorImpl.cpp.597256D4DDDCE640.idx  CursorImpl.hpp.057DF6E0B870FCB1.idx  CursorImpl.hpp.B2891C2B240A925F.idx  (+262 more)
assets/maps/: maps.tiled-session
assets/tex/: me.aseprite
src/: arch.cpp  arch.hpp  assets.cpp  assets.hpp  colors.hpp  common.cpp  common.hpp  events.cpp  events.hpp  input.cpp  input.hpp  main.cpp  map.cpp  map.hpp
src/components/: state_machine.hpp  timer.cpp  timer.hpp
